# e-commerce-etl-project

./: .dockerignore  .env.example  .gitignore  README.md  databricks.yml  docker-compose.yml  pyproject.toml
airflow/dags/: olist_daily_ingestion.py
databricks/: README.md
databricks/dashboards/: ecommerce_analytics.lvdash.json
databricks/notebooks/: 00_setup_storage.py  01_bronze_ingestion.py  02_silver_transformations.py  03_gold_analytics.py
databricks/resources/: ecommerce_dashboard.yml  ecommerce_jobs.yml
databricks/scripts/: upload_landing.ps1  validate_sql_queries.ps1
databricks/sql/: 01_executive_kpis.sql  02_daily_sales.sql  03_delivery_performance.sql  04_top_sellers.sql  05_customer_rfm_segments.sql  06_sales_by_customer_state.sql  README.md
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: _mart_models.yml  mart_customer_rfm.sql  mart_daily_sales.sql  mart_delivery_performance.sql  mart_seller_performance.sql
dbt/models/staging/: _olist_sources.yml  _staging_models.yml  stg_customers.sql  stg_geolocation.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_product_category_translation.sql  stg_products.sql  stg_sellers.sql
dbt/models/warehouse/: _warehouse_models.yml  dim_customers.sql  dim_date.sql  dim_geography.sql  (+4 more)
dbt/tests/: assert_order_item_amounts_are_non_negative.sql  assert_payment_amounts_are_non_negative.sql
docker/airflow/: Dockerfile
sql/: raw_schema.sql
src/ecommerce_pipeline/: __init__.py  cli.py  config.py  datasets.py  db.py  replay.py
tests/: test_replay.py
